infra/Kube/backend-template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: olx-api
  namespace: olx-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: olx-api
  template:
    metadata:
      labels:
        app: olx-api
    spec:
      containers:
      - name: olx-api
        image: ${AZURE_CONTAINER_REGISTRY}.azurecr.io/olx-api:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "1"
            memory: "1Gi"
          limits:
            cpu: "2"
            memory: "2Gi"
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 180
          periodSeconds: 20
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 190
          periodSeconds: 10
          failureThreshold: 3
